[package]
name = "include_more"
version = "0.1.0"
authors = ["Zachary Kohnen <14093962+DusterTheFirst@users.noreply.github.com>"]
edition = "2018"

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }
rsass = "0.16"
swc = "0.1"
swc_common = { version = "0.10", features = ["tty-emitter"] }

[lib]
proc-macro = true
